crates/ace-macros/tests/compile_fail/struct_skip_read_all.rs
use ace_macros::FrameRead;

#[derive(FrameRead)]
#[frame(error = "TestError")]
pub struct SkipAndReadAll<'a> {
    #[frame(skip, read_all)]
    pub data: &'a [u8],
}

fn main() {}
